--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "serve dist",
+    "start": "serve dist -s -n -L -p $PORT"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
