--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,7 +52,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
-    "serve": "^14.2.0",
+    "serve": "^14.2.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
