--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,11 +48,11 @@
     "react-dom": "^18.2.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.22.2",
+    "serve": "^14.2.2",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.0",
-    "serve": "^14.2.0"
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
